# pkengine

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  line_count.sh
custom/source/: main.cpp
header/: color_vertex.hpp  engine.hpp  frame_buffers.hpp  pkengine.hpp  surface.hpp  window.hpp
header/checks/: check_device_extension_support.hpp  is_device_suitable.hpp
header/config/: info.hpp  instance.hpp  required_extensions.hpp
lib/: CMakeLists.txt
lib/pkengine/: CMakeLists.txt
lib/pkengine/header/pkengine/: context.hpp  engine.hpp  engine_info.hpp  engine_node.hpp  frame_data.hpp  object_tree.hpp  project.hpp  scene.hpp  scene_node.hpp  time.hpp  user_init.hpp
lib/pkengine/header/pkengine/assert/: config.hpp  runtime_assert.hpp
lib/pkengine/header/pkengine/component/: absolute_transform.hpp  animation_controller.hpp  camera.hpp  component.hpp  component_base.hpp  fps_logger.hpp  mesh_renderer.hpp  relative_transform.hpp  transform.hpp
lib/pkengine/header/pkengine/config/: engine_config_type.hpp  logger_config_type.hpp  memory_config_type.hpp  render_config_type.hpp
lib/pkengine/header/pkengine/exception/: internal.hpp
lib/pkengine/header/pkengine/glfw/: glfw_exception.hpp  glfw_instance.hpp  window.hpp
lib/pkengine/header/pkengine/image/: image_reader.hpp
lib/pkengine/header/pkengine/internal/glfw/: glfw_instance.hpp  window.hpp
lib/pkengine/header/pkengine/internal/vulkan/: command_buffer.hpp  command_pool.hpp  descriptor_pool.hpp  descriptor_set.hpp  descriptor_set_layout.hpp  extensions.hpp  frame_buffer.hpp  frame_buffers.hpp  image.hpp  image_views.hpp  logical_device.hpp  physical_device.hpp  render_command_buffer.hpp  render_pass.hpp  shader_module.hpp  surface.hpp  swap_chain.hpp  vulkan_instance.hpp  vulkan_queue.hpp
lib/pkengine/header/pkengine/internal/vulkan/buffer/: descriptor_buffer.hpp  device_allocator.hpp  device_buffer.hpp  staged_buffer.hpp  vertex_buffer.hpp
lib/pkengine/header/pkengine/internal/vulkan/pipeline/: shader_sequence.hpp  vulkan_pipeline.hpp
lib/pkengine/header/pkengine/internal/vulkan/shader/: device_allocator.hpp  device_buffer.hpp  matrix.hpp  uniform_buffer.hpp  uniform_buffer_object.hpp  uniform_buffers.hpp  vertex.hpp
lib/pkengine/header/pkengine/internal/vulkan/sync/: semaphore.hpp
lib/pkengine/header/pkengine/internal/vulkan/types/: matrix.hpp  model_data.hpp  pixel.hpp  scene_data.hpp  vertex.hpp
lib/pkengine/header/pkengine/internal/vulkan/types/descriptors/: global_descriptor.hpp  object_descriptor.hpp
lib/pkengine/header/pkengine/logger/: config.hpp  console_stream.hpp  file_stream.hpp  logger.hpp
lib/pkengine/header/pkengine/manifest/: shader_manifest.hpp
lib/pkengine/header/pkengine/math/: deg_rad.hpp  matrix4.hpp  vector.hpp  vector3.hpp
lib/pkengine/header/pkengine/model/: model_allocator.hpp
lib/pkengine/header/pkengine/util/: ansi_color.hpp  atomic_erasable_list.hpp  const_string.hpp  erasable_list.hpp  exception.hpp  file_name.hpp  make_array.hpp  signal_handler.hpp  spin_lock.hpp  stack_trace.hpp  string_hash_table.hpp  temp_file.hpp  version.hpp
lib/pkengine/header/pkengine/vulkan/: camera_data.hpp  descriptor_allocator.hpp  descriptor_writer.hpp  device_queue.hpp  engine_info.hpp  frame_data.hpp  image_views.hpp  logical_device.hpp  mesh.hpp  mesh_buffer.hpp  physical_device.hpp  required_extensions.hpp  surface.hpp  swap_chain.hpp  validation_layers.hpp  vulkan_instance.hpp
lib/pkengine/header/pkengine/vulkan/alloc/: allocated_buffer.hpp  allocated_image.hpp  vulkan_allocator.hpp
lib/pkengine/header/pkengine/vulkan/builder/: graphics_pipeline_builder.hpp
lib/pkengine/header/pkengine/vulkan/shader_struct/: graphical_push_constants.hpp  mat4.hpp  scene_data.hpp  vec3.hpp  vec4.hpp  vertex.hpp
lib/pkengine/header/pkengine/vulkan/struct/: command_buffer_submit_info.hpp  depth_attachment_info.hpp  descriptor_set_layout_binding.hpp  image_create_info.hpp  image_subresource_range.hpp  image_view_create_info.hpp  pipeline_shader_stage_create_info.hpp  rendering_attachment_info.hpp  rendering_info.hpp  semaphore_submit_info.hpp  submit_info.hpp
lib/pkengine/header/pkengine/vulkan/sync/: fence.hpp  semaphore.hpp
lib/pkengine/header/pkengine/vulkan/util/: copy_buffer_image.hpp  copy_image.hpp  queue_family_indices.hpp  swap_chain_support.hpp  transition_image.hpp  vkresult_string.hpp  vulkan_exception.hpp
lib/pkengine/header/pkengine/vulkan/util/checks/: are_extensions_supported.hpp  is_device_suitable.hpp
lib/pkengine/header/pkengine/vulkan/wrapper/: command_buffer.hpp  command_pool.hpp  command_queue.hpp  compute_pipeline.hpp  descriptor_pool.hpp  descriptor_set.hpp  descriptor_set_layout.hpp  graphics_pipeline.hpp  image_views.hpp  logical_device.hpp  physical_device.hpp  sampler.hpp  shader_module.hpp  surface.hpp  swap_chain.hpp  vulkan_image.hpp  vulkan_instance.hpp
lib/pkengine/header/pkengine/vulkan/wrapper/sync/: fence.hpp  semaphore.hpp
lib/pkengine/source/pkengine/: config_checks.cpp  engine.cpp  entry.cpp  signal_handlers.cpp
lib/pkengine/source/pkengine/engine/: engine.cpp  free.cpp  init.cpp  loop.cpp  recreate_swap_chain.cpp  run.cpp
lib/pkengine/source/pkengine/glfw/: glfw.cpp
lib/pkengine/source/pkengine/logger/: logger.cpp  stream.cpp
lib/pkengine/source/pkengine/manifest/: shader_manifest.cpp
pkengine/: Cargo.toml
pksweeper/: Cargo.toml
projects/: CMakeLists.txt
projects/default_project/: CMakeLists.txt  main.cpp
projects/default_project/config/: application_config.hpp  engine_config.hpp  logger_config.hpp  memory_config.hpp  render_config.hpp
projects/default_project/header/: block_controller.hpp  clock_controller.hpp
projects/default_project/shaders/: CMakeLists.txt  colored_triangle.frag  colored_triangle.vert  gradient.comp  shader.frag  shader.vert  test.vert
projects/default_project/source/: main.cpp
scripts/: generate_compile_commands.sh  line_count.sh
source/: glfw_instance.cpp
src/: main.rs
(+188 files in other folders)
